--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+Flask==3.0.0
+gunicorn==21.2.0
 PyPDF2==3.0.1
-ebooklib==0.18
-Pillow>=10.0.0
+PyMuPDF==1.23.8
+EbookLib==0.18
+Pillow==10.1.0
+Werkzeug==3.0.1
 beautifulsoup4>=4.12.0
 lxml>=4.9.0
-PyMuPDF>=1.23.0
