--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,39 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-env/
-venv/
+# Dependencies
+node_modules/
+.pnp
+.pnp.js
+
+# Build
+.next/
+out/
+build/
+dist/
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Local env files
+.env*.local
 .env
 
-# EPUBs gerados (manter apenas os de exemplo se necessário)
-*.epub
+# Vercel
+.vercel
 
-# Arquivos temporários
-*.tmp
-*.log
-nul
-
-# Imagens extraídas/temporárias
-capa_extraida.jpeg
-capa_sulco_teste.jpg
-
-# Diretórios de saída
-output_epubs/
-conversoes_web/
-transcricoes_web/
-
-# IDEs
+# IDE
 .vscode/
 .idea/
 *.swp
 *.swo
 
-# Sistema
-Thumbs.db
+# System
 .DS_Store
+Thumbs.db
+
+# Test PDFs (keep folder but ignore contents)
+test_pdfs/*.pdf
+
+# Misc
+*.log
+*.tmp
